--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-python-telegram-bot==20.6 # Спробуємо 20.6 замість 20.7
+python-telegram-bot==20.6
 plotly
 matplotlib
 aiohttp
-uvicorn==0.23.2 # Явно вказуємо версію uvicorn
+uvicorn==0.23.2
 translitua
 gunicorn
